Description corrected in prerpocessing notebook

--- a/udemy/machine-learning-a-z/notebooks/Part 1 - Data Preprocessing/Preprocessing.ipynb
+++ b/udemy/machine-learning-a-z/notebooks/Part 1 - Data Preprocessing/Preprocessing.ipynb
@@ -227,8 +227,8 @@
     "<h3>Encoding categorical data</h3>\n",
     "\n",
     "<h4>Categorical data will be encoded in to values</h4>\n",
-    "<h4>Country data will be encoded in to dummy variables</h4>\n",
-    "<h4>Purchased data will be encoded in to simple values</h4>"
+    "<h4>Encoded categorical data will be encoded in to dummy variables</h4>\n",
+    "<h4>'Purchased' data will be encoded in to simple values</h4>"
    ]
   },
   {
