Multiple Linear Regression notebook updated with R-squared analysis

--- a/udemy/machine-learning-a-z/notebooks/Part 2 - Regression/MultipleLinearRegression.ipynb
+++ b/udemy/machine-learning-a-z/notebooks/Part 2 - Regression/MultipleLinearRegression.ipynb
@@ -737,7 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Thus, the optimal model (according to Backward Elimination) utilises only one variable (R&D Spend) to predict Profit</h3>"
+    "<p>Thus, the optimal model (according to Backward Elimination) utilises only one variable (R&D Spend) to predict Profit. However, Adjusted R-sqaure analysis shows that the inclusion of Marketing Spend actually improves the model</p>"
    ]
   }
  ],
