minor change in Logistic Regression Notebook

--- a/udemy/machine-learning-a-z/notebooks/Part 3 - Classification/LogisticRegression.ipynb
+++ b/udemy/machine-learning-a-z/notebooks/Part 3 - Classification/LogisticRegression.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "<h1>Logistic Regression</h1>\n",
     "\n",
-    "<h3>This notebook focuses on creating a Logistic Regression Model for classification</h3>"
+    "<h3>This notebook focuses on creating a Logistic Regression Model for classification</h3>\n",
+    "\n",
+    "<p>Problem: predict if a person is going to buy a car based on their age and estimated salary</p>"
    ]
   },
   {
